<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/branco_quente"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ratatouille"
            android:textColor="@color/verde_toolbar"
            android:textSize="48sp"
            android:textStyle="bold"
            android:gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/input_title"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/verde_escuro"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/containerIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Primeira linha inicial -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:background="@color/verde_claro"
                        android:id="@+id/inputIngrediente"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:hint="Ingrediente"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/inputQuantidade"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="Qtd"
                        android:inputType="number"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </com.google.android.material.textfield.TextInputLayout>


    android:background="@color/verde_claro"

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/laranja_energetico"
        android:text="@string/search_button"
        android:textColor="@color/branco_puro"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="280dp"
        android:background="@drawable/bottom_nav_background"
        app:itemIconTint="@color/laranja_energetico"
        app:itemTextColor="@color/branco_puro"
        app:itemRippleColor="@android:color/transparent"
        app:itemBackground="@null"
        app:itemActiveIndicatorStyle="@null"
        app:itemTextAppearanceActive="@style/BottomNavTextStyle"
        app:itemTextAppearanceInactive="@style/BottomNavTextStyle"
        app:menu="@menu/bottom_nav_menu"/>


</LinearLayout>